[workspace]
members = ["packages/*"]
resolver = "2"

[workspace.package]
authors = ["Rust For Web <info@rustforweb.org>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/RustForWeb/leptos-utils"
version = "0.1.0"

[workspace.dependencies]
leptos = "0.7.0"
leptos-struct-component-macro = { path = "packages/leptos-struct-component-macro", version = "0.1.0" }
log = "0.4.25"
